// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment Checks snapshot 1`] = `
<commentcard-stub
  class="tui-comment"
  data-id="42"
>
  <avatar-stub
    imagealt="xx fwf"
    imagesrc="http://example.com"
  />
   
  <commentheader-stub
    deleteable="true"
    size="small"
    timedescription="5th September 2019"
    updateable="true"
    userfullname="xx fwf"
  />
   
  <commentcontent-stub
    content="Hello world"
    editor="[object Object]"
    itemid="42"
    size="small"
  />
   
  <commentaction-stub
    area="comment"
    class="tui-comment__footer"
    commentid="42"
    reactable="true"
    replyable="true"
    showlikebutton="true"
    size="small"
    totalreplies="21"
  />
   
  <replybox-stub
    area="comment"
    class="tui-comment__replyBox"
    commentid="42"
    component="totara_comment"
    editor="[object Object]"
    replyable="true"
    showlikebutton="true"
    size="small"
    totalreplies="21"
  />
</commentcard-stub>
`;

exports[`Comment Checks snapshot without thumbs up 1`] = `
<commentcard-stub
  class="tui-comment"
  data-id="42"
>
  <avatar-stub
    imagealt="xx fwf"
    imagesrc="http://example.com"
  />
   
  <commentheader-stub
    deleteable="true"
    size="small"
    timedescription="5th September 2019"
    updateable="true"
    userfullname="xx fwf"
  />
   
  <commentcontent-stub
    content="Hello world"
    editor="[object Object]"
    itemid="42"
    size="small"
  />
   
  <commentaction-stub
    area="comment"
    class="tui-comment__footer"
    commentid="42"
    reactable="true"
    replyable="true"
    size="small"
    totalreplies="21"
  />
   
  <replybox-stub
    area="comment"
    class="tui-comment__replyBox"
    commentid="42"
    component="totara_comment"
    editor="[object Object]"
    replyable="true"
    size="small"
    totalreplies="21"
  />
</commentcard-stub>
`;
